# LearnAnything

./: .gitignore  README.md  config.toml  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-python/: extract.py  main.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  config.rs  db.rs  lib.rs  main.rs
src/pages/: Builder.tsx  Dashboard.tsx  FocusMode.tsx  Roadmap.tsx
